--- a/Assets/Ink-Storyline/Discovering Canis Villa | Chapter 1/style.css
+++ b/Assets/Ink-Storyline/Discovering Canis Villa | Chapter 1/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Lato, sans-serif;
     font-weight: normal;
-    background-image: url("BG2.jpg"); /* Background from App */
+    background-image: url("Background.jpg"); /* Background from App */
     /* background-color: #DEB887; /* Burly Wood */
     /* background-color: #FFEBCD; /* Blanched Almond */
     background-color: #ece3b7; /* Color Picker tool */
