--- a/Assets/INK WEB/style.css
+++ b/Assets/INK WEB/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Lato, sans-serif;
     font-weight: normal;
-    background-image: url("BG2.jpg"); /* Background from App */
+    background-image: url("Background.jpg"); /* Background from App */
     /* background-color: #DEB887; /* Burly Wood */
     /* background-color: #FFEBCD; /* Blanched Almond */
     background-color: #ece3b7; /* Color Picker tool */
@@ -22,7 +22,7 @@ h1 {
 p, a {
     color: #262626; /* 15% Lighter than Black */
     line-height: 1.4em;
-    font-size: 1.2em;
+    font-size: 1.15em;
 }
 a {
 	color: #DC143C;
